# django-seq

./: .editorconfig  .gitignore  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
dev/django/core/: settings.py
dev/django/misc/: prepare_swappable_migration.py
django_seq/: __init__.py  __version__.py  _typing.py  _typing_ext.py  admin.py  apps.py  connector.py  fields.py  globals.py  models.py  registry.py  segmentation.py  setup.py  tests.py  utils.py
django_seq/conf/: settings.py
django_seq/migrations/: 0001_initial.py
docs/source/: conf.py  index.rst
requirements/: requirements-dev.txt  requirements-docs.txt
samples/autofill/core/: settings.py
samples/autofill/items/: models.py  tests.py
samples/issues/core/: settings.py
samples/issues/issues/: apps.py  models.py  tests.py
samples/mti/items/: apps.py  models.py  tests.py
samples/swappable/core/: settings.py
samples/swappable/sequences/: apps.py  models.py  tests.py
