[bdist_wheel]
universal = 1

[metadata]
name = django-seq
version = attr: django_seq.__version__
author = Ertuğrul Noyan Keremoğlu
author_email = ertugkeremoglu@gmail.com
description = Django implementation of gapless sequences, with a configurable field type.
license = MIT
license_files = LICENSE
url = https://github.com/ertgl/django-seq/
classifiers =
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities
	Typing :: Typed

[options]
packages = find:
include_package_data = true
zip_safe = true
install_requires =
	django

[pycodestyle]
count = True
ignore = E402
max-line-length = 119
statistics = True

[flake8]
max-complexity = 15
max-line-length = 119
per-file-ignores =
	**/__init__.py: F401,F403,E501
exclude =
	__pycache__,
	.git,
	.venv,
	.history
	**/migrations/**.py
